# scimage

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: matlabutils.hpp  tensorops.hpp
scimage/: tensorops.hpp
src/: matlabutils.cpp  tensorops.cpp
